# rl-portfolio

./: .gitignore  LICENSE  README.md
01-dueling-dqn-pytorch/: README.md  agent.py  main.py  network.py  requirements.txt  utils.py
configs/: reward_model.yaml
docs/: BLOG.md
dpo_llm_alignment/: 0.110.0  0.27.0  data_utils.py  debug_env.py  download_model.py  eval.py  inference.py  quick_test.py  requirements.txt  train.py  train_cpu_test.py
dpo_llm_alignment/Qwen2.5-0.5B-Instruct/: .msc
modern-rlhf/: README.md  pyproject.toml
modern-rlhf/configs/: ppo.yaml  reward_model.yaml  sft.yaml
modern-rlhf/docs/: BLOG.md
modern-rlhf/scripts/: eval.py  generate_plots.py  run_full_pipeline.sh  run_ppo.py  run_reward_model.py  run_sft.py
modern-rlhf/src/rlhf_pipeline/models/: reference_model.py  reward_model.py
modern-rlhf/src/rlhf_pipeline/trainers/: ppo_trainer.py  rm_trainer.py  sft_trainer.py
modern-rlhf/src/rlhf_pipeline/utils/: __init__.py  checkpoint.py  config.py  logging_utils.py  metrics.py
modern-rlhf/tests/: test_pipeline.py
scripts/: run_full_pipeline.sh
src/rlhf_pipeline/utils/: checkpoint.py
